<resources>
    <string name="app_name">Easy Secured PassWallet</string>
    <string name="version">3.3.1</string>

    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="confirmDeletePasswalletItem">Are you sure to delete this entry?</string>

    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="view">View</string>
    <string name="copy">Copy</string>
    <string name="copyUser">Copy User</string>
    <string name="copyKey">Copy Key</string>
    <string name="clearClipboard">Clear Clipboard</string>

    <string name="enterPasswordLabel">Enter Key:</string>
    <string name="createPasswalletTitle">Create PassWallet</string>
    <string name="create">Create</string>
    <string name="createAccountTitle">Create Account</string>

    <string name="save">Save</string>
    <string name="descriptionLabel">Description:</string>
    <string name="siteLabel">Site:</string>
    <string name="passwordLabel">Key:</string>
    <string name="nameLabel">Name:</string>
    <string name="nickNameLabel">Nick name:</string>
    <string name="editAccountTitle">Edit Account</string>

    <string name="unlockPasswalletTitle">Unlock PassWallet</string>
    <string name="browsePasswallet">Browse</string>
    <string name="openPasswallet">Unlock</string>
    <string name="openFingerprintPasswallet">With finger print</string>
    <string name="addPasswalletItem">Add</string>
    <string name="totalPasswalletItemsLabel">Total:</string>
    <string name="createPasswordForNotEncryptedPasswalletLabel">Create Key For Not Encrypted Passwallet:</string>
    <string name="importPasswalletButton">Import</string>

    <string name="search_hint">Search For User Accounts</string>
    <string name="createPassWalletFileLink"><a href="#">Create PassWallet</a></string>
    <string name="importNotEncryptedPassWalletFile"><a href="#">Import Not Encrypted PassWallet</a></string>
    <string name="createEmptyNotEncryptedPassWalletFile"><a href="#">Create empty not encrypted passwallet</a></string>
    <string name="howToImportNotEncryptedPassWalletFileTitle">How To Import Not Encrypted PassWallet</string>

    <string name="emptyNotEncryptedPassWalletFileInfo"><![CDATA[In order to import your confidential data to a secured (encrypted) passwallet
        you need to create a xml file with you preferred xml editor or just generate an empty one using the \"Create empty not encrypted passwallet\" link.
        The plain passwallet xml file structure is at below:\n
        <USERSACCOUNTS>\n
        \t<userAccount>\n
        \t\t<description>description_1508524059202</description>\n
        \t\t<id>1</id>\n
        \t\t<name>name_1508524059202</name>\n
        \t\t<nickName>nickname_1508524059202</nickName>\n
        \t\t<password>pass_1508524059202</password>\n
        \t\t<siteURL>siteurl_1508524059202</siteURL>\n
        \t</userAccount>\n
        …
        </USERSACCOUNTS>\n
        ]]></string>
    <string name="generate_pass">Generate</string>
    <string name="generate_pass_home"><a href="#">Generate Password</a></string>
    <string name="clear_clipboard_home"><a href="#">Clear Clipboard</a></string>
    <string name="gen_pass_include_pass">Include numbers</string>
    <string name="gen_pass_include_uppercase">Include UpperCase</string>
    <string name="gen_pass_include_lowercase">Include LowerCase</string>
    <string name="gen_pass_include_symbols"><![CDATA[Include Symbols (!@#$%&..)]]></string>
    <string name="copy_password_to_clipboard">Copy to Clipboard</string>
    <string name="passwordLengthLabel">Length (Max is 256)</string>
    <string name="reset_password_settings"><a href="#">Reset settings</a></string>
</resources>
