<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.GeneratePasswordActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="400dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/password_EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="text"
            android:text="Password"
            tools:ignore="LabelFor" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/length_textView"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/passwordLengthLabel" />

                <EditText
                    android:id="@+id/length_EditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:inputType="number"
                    android:digits="0123456789"
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/include_numbers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gen_pass_include_pass" />

            <CheckBox
                android:id="@+id/include_uppercase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gen_pass_include_uppercase" />

            <CheckBox
                android:id="@+id/include_lowercase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gen_pass_include_lowercase" />

            <CheckBox
                android:id="@+id/include_symbols"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gen_pass_include_symbols" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/generate_password_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/generate_pass"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/copy_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copy_password_to_clipboard"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <TextView
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:autoLink="web"
            android:gravity="start"
            android:text="@string/reset_password_settings"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>