<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CreatePassWalletItemActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="116dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/createAccountTitle" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/nick_name_textView"
                android:layout_width="116dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/nickNameLabel" />

            <EditText
                android:id="@+id/nick_name_EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:autofillHints=""
                android:ems="12"
                android:inputType="text"
                tools:ignore="LabelFor" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/name_textView"
                android:layout_width="116dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/nameLabel" />

            <EditText
                android:id="@+id/name_EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:autofillHints=""
                android:ems="12"
                android:inputType="text"
                tools:ignore="LabelFor" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/password_textView"
                android:layout_width="116dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/passwordLabel" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password_EditText"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:inputType="textPassword"
                    android:autofillHints=""
                    tools:ignore="LabelFor" />

                <Button
                    android:id="@+id/generate_password_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/password_EditText"
                    android:text="@string/generate_pass" />
            </RelativeLayout>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/site_textView"
                android:layout_width="116dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/siteLabel" />

            <EditText
                android:id="@+id/site_EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:autofillHints=""
                android:ems="12"
                android:inputType="text"
                tools:ignore="LabelFor" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/description_textView"
                android:layout_width="116dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/descriptionLabel" />

            <EditText
                android:id="@+id/description_EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:autofillHints=""
                android:ems="12"
                android:inputType="text"
                tools:ignore="LabelFor" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/create_passwallet_item_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:text="@string/create" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>